Updated template and notes, started index

--- a/css/media-style.css
+++ b/css/media-style.css
@@ -24,6 +24,10 @@
     #festival-title{
         font-size: 27px !important;
     }
+
+    #language {
+        height: 30px;
+    }
 }
 
 /* small and narrower */
