--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 
 
-
+.hr-blue {
+    background-color: #3E97D6;
+    height: 1px;
+}
 
 #main-navbar .nav-link:hover {
     background: #f8f9fa;
@@ -18,4 +21,128 @@
     align-items: flex-start !important;
 }
 
+.ticket-info {
+    border: 2px solid #3E97D6;
+    border-radius: 10px;
+    padding: 5%;
+    margin-bottom: 2%;
+    color: white;
+}
 
+.ticket-info b {
+    color: #3E97D6;
+}
+.ticket-info:hover {
+    opacity: 0.6;
+}
+
+#main_actors p {
+    margin-top: 20px;
+}
+
+#main_actors img {
+    border-radius: 5px;
+}
+
+#main_showings img {
+    border-radius: 10px;
+}
+
+
+#main_actors h3 {
+    color: #3E97D6;
+    font-style: italic;
+}
+
+#actor p {
+    margin-top: 20px;
+}
+
+#actor img {
+    border-radius: 5px;
+}
+
+#actor h3 {
+    color: #3E97D6;
+    margin-bottom: 15px;
+}
+
+#actor b {
+    color: #3E97D6;
+}
+
+#actor h4 {
+    color: #3E97D6;
+}
+
+#films img { 
+    border-radius: 10px;
+}
+
+#film dt {
+    color: #3E97D6;
+}
+#film img {
+    border-radius: 10px;
+}
+
+#film h2 {
+    color: #3E97D6;
+    text-align: center;
+}
+
+.films-repertoire {
+    background-color: #ececec;
+    color: #504d4d;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.films-repertoire h3 {
+    color: black;
+    text-align: center;
+}
+
+.films-repertoire h5 {
+    color: black;
+    font-style: italic;
+    background-color: #ada4a4;
+    margin-top: 0;
+}
+
+.films-repertoire b {
+    color: black;
+}
+
+.films-repertoire hr {
+    background-color: black;
+    margin: 0;
+}
+.showing {
+    border-radius: 5px;
+    border: 2px solid black;
+    text-align: center;
+    margin-bottom: 20px;
+}   
+
+.force-to-bottom {
+    position: absolute;
+    bottom: 5%;
+    width: 100%;
+}
+
+#main_news img {
+    border-radius: 5px;
+}
+
+#main_news h3 {
+    color: #3E97D6;
+}
+
+.news-article {
+    border: 1px solid #F2F2F2;
+    border-radius: 10px;
+    padding: 15px;
+    margin-right: 2px;
+}
